# LA32R-Simulation-Framework

./: CMakeLists.txt
mem_init/: dmem.init
rtl_top/: CMakeLists.txt
simulator/: CMakeLists.txt
vsrc/: top.v
